<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".view.AdDetailFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ad_detail_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background"
        android:elevation="@dimen/toolbar_elevation"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:contentDescription="@string/back"
            android:padding="0dp"
            android:scaleType="center"
            android:src="@mipmap/ic_back_btn" />

        <ImageView
            android:id="@+id/enjoei_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:padding="0dp"
            app:srcCompat="@mipmap/logo"
            tools:ignore="ContentDescription" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/loading"
        android:indeterminate="true"
        android:visibility="gone"
        app:indeterminateAnimationType="disjoint"
        app:indicatorColor="@color/font_color"
        app:layout_constraintTop_toBottomOf="@+id/ad_detail_toolbar"
        app:showAnimationBehavior="inward"
        app:trackColor="@color/font_light_color"
        app:trackCornerRadius="0dp"
        app:trackThickness="4dp" />

    <ScrollView
        android:id="@+id/ad_detail_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="57dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollview_constraintlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ad_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/product_image"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/highlight_vertical_line"
                android:layout_width="1dp"
                android:layout_height="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ad_image"
                android:background="@color/light_border_color"
                android:layout_marginTop="@dimen/default_vertical_separation"/>


            <TextView
                android:id="@+id/phantom_available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_vertical_separation"
                android:layout_marginEnd="60dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/available"
                android:textColor="@color/font_light2_color"
                android:textSize="10sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@id/highlight_vertical_line"
                app:layout_constraintTop_toBottomOf="@id/ad_image" />

            <TextView
                android:id="@+id/brand_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_vertical_separation"
                android:fontFamily="@font/noto_sans"
                android:text="@string/brand"
                android:textColor="@color/font_light2_color"
                android:textSize="10sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@id/phantom_available"
                app:layout_constraintStart_toStartOf="@id/phantom_available"
                app:layout_constraintTop_toBottomOf="@id/ad_image" />

            <TextView
                android:id="@+id/brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_related"
                android:text="adidas nike reebok"
                android:textColor="@color/font_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/brand_label"
                app:layout_constraintStart_toStartOf="@id/brand_label"
                app:layout_constraintTop_toBottomOf="@id/brand_label" />


            <TextView
                android:id="@+id/phantom_sold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="@dimen/default_vertical_separation"
                android:fontFamily="@font/noto_sans"
                android:text="@string/sold"
                android:textColor="@color/font_light2_color"
                android:textSize="10sp"
                android:visibility="invisible"
                app:layout_constraintStart_toEndOf="@id/highlight_vertical_line"
                app:layout_constraintTop_toBottomOf="@id/ad_image" />

            <TextView
                android:id="@+id/condition_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_vertical_separation"
                android:fontFamily="@font/noto_sans"
                android:text="condição"
                android:textColor="@color/font_light2_color"
                android:textSize="10sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@id/phantom_sold"
                app:layout_constraintStart_toStartOf="@id/phantom_sold"
                app:layout_constraintTop_toBottomOf="@id/ad_image" />

            <TextView
                android:id="@+id/condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_related"
                android:text="usado"
                android:textColor="@color/font_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/condition_label"
                app:layout_constraintStart_toStartOf="@id/condition_label"
                app:layout_constraintTop_toBottomOf="@id/condition_label" />


            <TextView
                android:id="@+id/price_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_start_margin"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/noto_sans_bold"
                android:text="R$ 250,00"
                android:textAlignment="viewStart"
                android:textColor="@color/highlight_color"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/condition" />

            <TextView
                android:id="@+id/price_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_start_margin"
                android:layout_marginTop="@dimen/vertical_related"
                android:text="12x R$ 10,49 sem juros"
                android:textColor="@color/font2_color"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price_textview" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_start_margin"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="@dimen/default_start_margin"
                android:ellipsize="end"
                android:fontFamily="@font/noto_sans_bold"
                android:letterSpacing="0"
                android:text="tênis farm adidas tucano azul que vai estourar o tamanho da minha tela porque eu disse que ia pra fazenda"
                android:textColor="@color/font_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price_condition" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_start_margin"
                android:layout_marginTop="@dimen/default_vertical_separation"
                android:layout_marginEnd="@dimen/default_start_margin"
                android:fontFamily="@font/noto_sans"
                android:text="Lindo tênis da coleção 2018 farm + adidas, novo na caixa, inclusive com as tags! Comprei e acabei nunca usando. Tamanho europeu 8.5."
                android:textColor="@color/font_color"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/store_box"
                android:layout_width="match_parent"
                android:layout_height="137dp"
                android:layout_marginStart="@dimen/default_start_margin"
                android:layout_marginTop="@dimen/default_vertical_separation"
                android:layout_marginEnd="@dimen/default_start_margin"
                android:background="@drawable/light_border"
                app:layout_constraintTop_toBottomOf="@id/description">

                <ImageView
                    android:id="@+id/store_logo"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="@dimen/default_start_margin"
                    android:layout_marginTop="@dimen/default_vertical_separation"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/store_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="adidas"
                    android:textColor="@color/font_color"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@id/store_logo"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="@dimen/vertical_related"
                    android:fontFamily="@font/noto_sans"
                    android:text="loja oficial"
                    android:textSize="10sp"
                    app:layout_constraintStart_toEndOf="@id/store_logo"
                    app:layout_constraintTop_toBottomOf="@id/store_name" />


                <View
                    android:id="@+id/horizontal_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/default_start_margin"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="@dimen/default_start_margin"
                    android:background="@color/light_border_color"
                    app:layout_constraintTop_toBottomOf="@id/store_logo" />

                <View
                    android:id="@+id/vertical_line"
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="@dimen/default_vertical_separation"
                    android:background="@color/light_border_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/horizontal_line" />

                <TextView
                    android:id="@+id/available_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="60dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/available"
                    android:textColor="@color/font_light2_color"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="@id/vertical_line"
                    app:layout_constraintTop_toBottomOf="@id/horizontal_line" />

                <TextView
                    android:id="@+id/available_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_related"
                    android:text="350"
                    android:textColor="@color/font_color"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@id/available_label"
                    app:layout_constraintStart_toStartOf="@id/available_label"
                    app:layout_constraintTop_toBottomOf="@id/available_label" />

                <TextView
                    android:id="@+id/sold_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/sold"
                    android:textColor="@color/font_light2_color"
                    android:textSize="10sp"
                    app:layout_constraintStart_toEndOf="@id/vertical_line"
                    app:layout_constraintTop_toBottomOf="@id/horizontal_line" />

                <TextView
                    android:id="@+id/sold_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_related"
                    android:text="1.204"
                    android:textColor="@color/font_color"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@id/sold_label"
                    app:layout_constraintStart_toStartOf="@id/sold_label"
                    app:layout_constraintTop_toBottomOf="@id/sold_label" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>